--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+// pre {
+//     background-color: lightgray;
+//     padding: 1rem 0.5rem;
+//     margin: 0.5rem 0;
+// }
