insert link there.  insert image does show the image, but need to show a simple id in the editor and then replace into the html to display so the editor does not show 5000 char for a img src

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,9 @@
   <button (click)="onItalicize()">I</button>
   <button (click)="onUnderline()">U</button>
   <button (click)="onCode()">Code</button>
-  <button>Image</button>
-  <button>Link</button>
+  <input type="file" class="file-input" accept="image/*" (change)="onFileSelected($event)" #fileUpload>
+  <button (click)="fileUpload.click()">Image</button>
+  <button (click)="onLink()">Link</button>
 </div>
 
 <textarea 
